// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Markup Web does not render a script tag 1`] = `<div />`;

exports[`Markup Web does not render an image tag 1`] = `<div />`;

exports[`Markup Web renders a mixture of tags 1`] = `
<div>
  <div>
    <p
      href="http://www.google.com"
    >
      some link here
    </p>
  </div>
  <div>
    <strong>
      some text here
    </strong>
  </div>
  <div>
    <em>
       some more text here
    </em>
  </div>
  <div>
    <span>
      some other text here
    </span>
  </div>
</div>
`;

exports[`Markup Web renders a single paragraph 1`] = `
<p>
  This is the text for paragraph one
</p>
`;

exports[`Markup Web renders multiple children 1`] = `
<p
  style={
    Object {
      "color": "red",
    }
  }
>
  <p>
    This is the text for paragraph one
  </p>
  <p>
    This is the text for paragraph two
  </p>
</p>
`;

exports[`Markup Web renders multiple paragraphs 1`] = `
<div>
  <p>
    This is the text for paragraph one
  </p>
  <p>
    This is the text for paragraph two
  </p>
</div>
`;

exports[`Markup Web renders multiple paragraphs with a pull quote 1`] = `
<div>
  <p>
    This is the text for paragraph one
  </p>
  <p>
    This is the text for paragraph two
  </p>
  <p>
    This is the text for paragraph two
  </p>
  <p>
    This is the text for paragraph two
  </p>
  <p>
    This is the text for paragraph two
  </p>
  <div
    className="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flexShrink-1pxmb3b rn-flexBasis-7vfszb rn-flexDirection-eqz5dr rn-marginRight-61z16t rn-marginLeft-11wrixw rn-marginBottom-117bsoe rn-marginTop-1mnahxq rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-position-bnwqim rn-zIndex-1lgpqti"
  >
    <div
      className="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-4h8ur4 rn-fontSize-bpa3k9 rn-marginRight-61z16t rn-marginLeft-11wrixw rn-marginBottom-1xdgnw0 rn-marginTop-1mnahxq rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
      dir="auto"
      style={
        Object {
          "color": "rgba(19,53,78,1)",
        }
      }
    >
      “
    </div>
    <div
      className="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-color-102hald rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-4h8ur4 rn-fontSize-h1js2l rn-lineHeight-17rnw9f rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
      dir="auto"
    >
      [The judgement was] taken because of the evidence available in the court today, that the grandmother is an appropriate carer for the child
    </div>
    <div
      className="rn-alignItems-1awozwy rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flexShrink-1pxmb3b rn-flexBasis-7vfszb rn-flexDirection-18u37iz rn-height-z80fyv rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-marginTop-156q2ks rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-position-bnwqim rn-zIndex-1lgpqti"
    >
      <div
        className="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-j2s0nr rn-fontSize-n6v787 rn-lineHeight-1akm30i rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginLeft-11wrixw rn-marginBottom-p1pxzi rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
        dir="auto"
        style={
          Object {
            "color": "rgba(105,105,105,1)",
          }
        }
      >
        Katie Glass
      </div>
    </div>
  </div>
  <p>
    This is the text for paragraph two
  </p>
  <p>
    This is the text for paragraph two
  </p>
  <p>
    This is the text for paragraph two
  </p>
  <p>
    This is the text for paragraph two
  </p>
</div>
`;

exports[`Markup Web renders multiple paragraphs with ads 1`] = `
<div>
  <p>
    This is the text for paragraph one
  </p>
  <p>
    This is the text for paragraph two
  </p>
  <p>
    This is the text for paragraph two
  </p>
  <p>
    This is the text for paragraph two
  </p>
  <p>
    This is the text for paragraph two
  </p>
  <Ad
    code="intervention"
    style={71}
  />
  <p>
    This is the text for paragraph two
  </p>
  <p>
    This is the text for paragraph two
  </p>
  <p>
    This is the text for paragraph two
  </p>
  <p>
    This is the text for paragraph two
  </p>
</div>
`;

exports[`Markup Web renders tags nested within blocks 1`] = `
<div>
  Some text is here 
  <div>
    and there is some 
    <div>
      more text 
      <span>
        and in here
      </span>
    </div>
     after it too
  </div>
   and here
</div>
`;

exports[`Markup Web renders the anchor tag 1`] = `
<p
  href="www.google.com"
>
  some link here
</p>
`;

exports[`Markup Web renders the bold tag 1`] = `
<strong>
  some text here
</strong>
`;

exports[`Markup Web renders the italic tag 1`] = `
<em>
   some more text here
</em>
`;

exports[`Markup Web renders the line break tag 1`] = `<br />`;

exports[`Markup Web renders the span tag 1`] = `
<span>
  some other text here
</span>
`;

exports[`Markup Web renders wrapped tags 1`] = `
<p>
  Camilla Long is 
  <em>
    the Sunday Times
  </em>
   film critic. She also writes interviews and a column, and was named 
  <strong>
    interviewer of the year
  </strong>
   at the British Press Awards in 2010 and 2016.
</p>
`;
